<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".loginRegister.Login.LoginActivity">

    <LinearLayout
        android:id="@+id/Second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/returnButton4"
            android:layout_width="69dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/leptons"
            android:text="back"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:iconTint="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="Age"
            app:layout_constraintBottom_toTopOf="@+id/userInputWrapper"
            app:layout_constraintStart_toStartOf="@+id/userInputWrapper"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <DatePicker
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TextView
            android:id="@+id/profilePic4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="Profile Picture"
            app:layout_constraintStart_toStartOf="@+id/userInputWrapper"
            app:layout_constraintTop_toBottomOf="@+id/userInputWrapper" />

        <ImageView
            android:id="@+id/newPic"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toStartOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/profilePic"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:backgroundTint="@color/leptons"
            android:text="Choose Image"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/description3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="Description"
            app:layout_constraintBottom_toTopOf="@+id/passwordConfirmInputWrapper"
            app:layout_constraintStart_toStartOf="@+id/imageView4" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/DescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="hint"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signUp4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/leptons"
            android:text="Sign up"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/First"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/returnButton"
            android:layout_width="69dp"
            android:layout_height="53dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/leptons"
            android:text="back"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:iconTint="#FFFFFF" />

        <TextView
            android:id="@+id/title"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:text="Sign Up"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:text="Username" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="Username"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:text="Email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userInputWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/signIn_email_hint"
            app:startIconContentDescription="@string/login_user_hint"
            app:startIconDrawable="@drawable/ic_baseline_message_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/profilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="Password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmInputWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/signIn_password_hint"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/login_password_hint"
            app:startIconDrawable="@drawable/ic_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPassEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="Confirm Password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/signIn_password_hint"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/login_password_hint"
            app:startIconDrawable="@drawable/ic_password_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="Already Registered, Sign In" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:backgroundTint="@color/leptons"
            android:text="Continue"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>